--- a/src/components/route-list/RoutesTable.module.css
+++ b/src/components/route-list/RoutesTable.module.css
@@ -4,3 +4,19 @@
     text-wrap: nowrap;
     justify-items: center;
 }
+
+.authDetails {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.authType {
+    font-size: 14px;
+}
+
+.authField {
+    font-size: 12px;
+    color: #404b5a; /* colors.grey700 */
+    line-height: 14px;
+}
